# myao2

./: .dockerignore  .env.example  .gitignore  .wtp.yml  CLAUDE.md  Dockerfile  README.md  config.yaml.example  pyproject.toml  requirements.md
.github/workflows/: build.yml  ci.yml
hack/: db_viewer.py  prompt_tester.py
manifests/base/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml
spec/phase-1/: 01-project-setup.md  02-config-foundation.md  03-clean-architecture.md  04-slack-integration.md  05-llm-response.md  README.md
spec/phase-2/: 01-sqlite-persistence.md  02-message-repository.md  03-slack-history.md  03a-context-model.md  04-context-response.md  05-usecase-integration.md  README.md
spec/phase-2.5/: README.md
spec/phase-3/: 01-response-config.md  02-channel-monitor.md  03-response-judgment.md  04-extended-context.md  05-autonomous-response-usecase.md  06-periodic-check-loop.md  07-entrypoint-integration.md  08-integration-test.md  README.md  extra01-db-based-history.md  extra02-judgment-skip.md  extra03-context-refactoring.md
spec/phase-4/: 01-memory-config.md  02-memory-entity.md  03-memory-repository.md  04-context-memory-fields.md  04a-channel-messages-and-context.md  05-memory-summarizer.md  06-generate-memory-usecase.md  07-background-memory-service.md  08-response-generator-memory.md  09-entrypoint-integration.md  10-integration-test.md  README.md  extra04-judgment-interface-simplify.md  extra05-jinja2-templates.md  extra05a-memory-summarizer-system-prompt.md  (+11 more)
tests/: conftest.py  test_myao2.py  test_telemetry.py
(+189 files in other folders)
